sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:10: error: not found: value k
        if (!isSmaller(k,k+1)){
                       ^AlgBubbleSort2:10: error: not found: value k
        if (!isSmaller(k,k+1)){
                         ^AlgBubbleSort2:11: error: not found: value k
          swap(k+1,k)
               ^AlgBubbleSort2:11: error: not found: value k
          swap(k+1,k)
                   ^